tests/ui/nefeli/expressions/struct-expressions/struct-expression-base-initializer-type-2.stderr
error[E0308]: mismatched types
  --> $DIR/struct-expression-base-initializer-type-2.rs:22:11
   |
LL |         ..maria
   |           ^^^^^ expected `Employee`, found `EmployeeNot`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
